# aoc24

./: .gitignore  README.md  pyproject.toml  setup.sh
day01/: solver.py  test_solver.py
day02/: solver.py  test_solver.py
day03/: solver.py  test_solver.py
day04/: solver.py  test_solver.py
day05/: solver.py  test_solver.py
day06/: solver.py  test_solver.py
day07/: solver.hs  solver.py  test_solver.py
day08/: solver.py  test_solver.py
day09/: solver.py  test_solver.py
day10/: solver.py  test_solver.py
day11/: solver.py  test_solver.py
day12/: solver.py  test_solver.py
day13/: solver.py  test_solver.py
day14/: solver.py  test_solver.py
day15/: solver.py  test_solver.py
day16/: solver.py  test_solver.py
day17/: solver.py  test_solver.py
day18/: solver.py  test_solver.py
day19/: solver.py  test_solver.py
day20/: solver.py  test_solver.py
day21/: plot_lengths.py  solver.py  test_solver.py
day22/: solver.py  test_solver.py
day23/: solver.py  test_solver.py
day24/: .gitignore  solver.py  test_solver.py
day25/: solver.py  test_solver.py
