[project]
name = "aoc24"
version = "0.1.0"
description = "advent of code solutions 2024"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aoc",
    "matplotlib>=3.10.0",
    "numpy>=2.1.3",
    "snakeviz>=2.2.2",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
aoc = { path = "aoc/utils/py", editable = true }
