[project]
name = "aoc24"
version = "0.1.0"
description = "advent of code solutions 2024"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aoc",
    "bidict>=0.23.1",
    "matplotlib>=3.10.0",
    "networkx>=3.4.2",
    "numpy>=2.1.3",
    "pyvis>=0.3.2",
    "snakeviz>=2.2.2",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
aoc = { path = "aoc/utils/py", editable = true }
